--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 00:05:03 2018</p>
+         Last Run: Tue Oct 30 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "54",
-                 "57"
+                 "48",
+                 "53",
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "8",
-                 "8"
+                 "7",
+                 "7",
+                 "7"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 00:05:03 2018</p>
+         Last Run: Tue Oct 30 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -248,24 +248,24 @@
                         <td>Snow Showers</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>39</td>
-                        <td>85</td>
+                        <td>40</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Snow Showers</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>35</td>
-                        <td>77</td>
+                        <td>36</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -273,7 +273,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>21</td>
-                        <td>71</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "35",
+                 "40",
+                 "36",
                  "21"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "77",
-                 "71"
+                 "81",
+                 "72",
+                 "65"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "93",
+                 "94",
+                 "94",
                  "93"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 00:05:03 2018</p>
+         Last Run: Tue Oct 30 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>33</td>
-                        <td>61</td>
+                        <td>Overcast</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>24</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>NNW</td>
-                        <td>91</td>
+                        <td>NW</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>5</td>
-                        <td>3</td>
-                        <td>32</td>
-                        <td>59</td>
+                        <td>Overcast</td>
+                        <td>4</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>24</td>
+                        <td>63</td>
+                        <td>1</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>89</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>6</td>
-                        <td>4</td>
-                        <td>31</td>
-                        <td>58</td>
+                        <td>Overcast</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>24</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>87</td>
+                        <td>85</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "2",
-                 "3",
-                 "4"
+                 "1",
+                 "1",
+                 "3"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "5",
-                 "5",
-                 "6"
+                 "4",
+                 "4",
+                 "5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
-                 "32",
-                 "31"
+                 "24",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "59",
-                 "58"
+                 "65",
+                 "63",
+                 "62"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
+                 "93",
                  "89",
-                 "87"
+                 "85"
                ]
              }
            ]
