--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 01:05:03 2018</p>
+         Last Run: Tue Oct 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
-                 "53",
-                 "55"
+                 "47",
+                 "52",
+                 "54"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "7",
+                 "8",
+                 "8",
                  "7"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 01:05:03 2018</p>
+         Last Run: Tue Oct 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -248,20 +248,20 @@
                         <td>Snow Showers</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>40</td>
-                        <td>81</td>
+                        <td>39</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Snow Showers</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>36</td>
-                        <td>72</td>
+                        <td>35</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -276,8 +276,8 @@
                         <td>65</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>93</td>
+                        <td>SSW</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "36",
+                 "39",
+                 "35",
                  "21"
                ]
              },
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "72",
+                 "82",
+                 "73",
                  "65"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "93",
                  "94",
-                 "94",
-                 "93"
+                 "94"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 01:05:03 2018</p>
+         Last Run: Tue Oct 30 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -462,37 +462,37 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>4</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>24</td>
-                        <td>65</td>
+                        <td>62</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NW</td>
+                        <td>10</td>
+                        <td>W</td>
                         <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>24</td>
-                        <td>63</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>89</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>24</td>
-                        <td>62</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>NNW</td>
-                        <td>85</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "1",
-                 "1",
-                 "3"
+                 "2",
+                 "3",
+                 "4"
                ]
              },
              {
@@ -532,8 +532,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "4",
-                 "5"
+                 "5",
+                 "6"
                ]
              }
            ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "63",
-                 "62"
+                 "62",
+                 "58",
+                 "56"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "93",
-                 "89",
-                 "85"
+                 "90",
+                 "86"
                ]
              }
            ]
