--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 02:05:02 2018</p>
+         Last Run: Tue Oct 30 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
+                 "46",
                  "52",
-                 "54"
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "8",
-                 "7"
+                 "4",
+                 "3",
+                 "3"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 02:05:02 2018</p>
+         Last Run: Tue Oct 30 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Snow Showers</td>
+                        <td>Snow</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>39</td>
-                        <td>82</td>
+                        <td>40</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>93</td>
+                        <td>NW</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Snow Showers</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>35</td>
-                        <td>73</td>
+                        <td>Snow</td>
+                        <td>2</td>
+                        <td>-1</td>
+                        <td>36</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>94</td>
+                        <td>NNW</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-1</td>
-                        <td>21</td>
-                        <td>65</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>22</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>94</td>
+                        <td>NNE</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-2",
-                 "-1"
+                 "-1",
+                 "0"
                ]
              },
              {
@@ -317,8 +317,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "1",
-                 "2"
+                 "2",
+                 "3"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "39",
-                 "35",
-                 "21"
+                 "40",
+                 "36",
+                 "22"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "73",
-                 "65"
+                 "79",
+                 "69",
+                 "63"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "94",
-                 "94"
+                 "80",
+                 "86",
+                 "90"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 02:05:02 2018</p>
+         Last Run: Tue Oct 30 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>4</td>
                         <td>2</td>
-                        <td>24</td>
+                        <td>33</td>
                         <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>24</td>
+                        <td>33</td>
                         <td>58</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>90</td>
+                        <td>NNE</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>24</td>
+                        <td>41</td>
                         <td>56</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>86</td>
+                        <td>NNW</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "24"
+                 "33",
+                 "33",
+                 "41"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "94",
                  "93",
-                 "90",
-                 "86"
+                 "92"
                ]
              }
            ]
