--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 08:05:02 2018</p>
+         Last Run: Tue Oct 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
+                 "46",
                  "51",
-                 "55"
+                 "54"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 08:05:02 2018</p>
+         Last Run: Tue Oct 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -259,13 +259,13 @@
                         <td>11:00 AM</td>
                         <td>Overcast</td>
                         <td>2</td>
-                        <td>-1</td>
+                        <td>0</td>
                         <td>24</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -276,8 +276,8 @@
                         <td>67</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NW</td>
-                        <td>88</td>
+                        <td>NNE</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-1",
+                 "0",
                  "0"
                ]
              },
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "79",
-                 "84",
-                 "88"
+                 "85",
+                 "90"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 08:05:02 2018</p>
+         Last Run: Tue Oct 30 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>5</td>
                         <td>3</td>
                         <td>53</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
@@ -473,13 +473,13 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>6</td>
-                        <td>4</td>
-                        <td>53</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>52</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>94</td>
                      </tr>
                      <tr>
@@ -487,8 +487,8 @@
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>55</td>
-                        <td>57</td>
+                        <td>54</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "3",
-                 "4",
+                 "3",
                  "4"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "5",
-                 "6",
+                 "5",
                  "6"
                ]
              }
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "53",
-                 "53",
-                 "55"
+                 "52",
+                 "54"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
+                 "61",
                  "59",
-                 "57"
+                 "58"
                ]
              },
              {
